# crypto-issues

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  codecov.yml  docker-compose.yml  docker-services.yml
.github/workflows/: rust.yml  vue.yml
api/: Cargo.toml
api/src/: init.rs  lib.rs  main.rs
api/src/api/: kenobi.rs  mod.rs  openapi.rs
api/src/api/cryptocurrencies/: contract.rs  docs.rs  domain.rs  mod.rs  repository.rs
api/src/api/cryptocurrencies/data/: get.rs
api/src/api/cryptocurrencies/handlers/: get.rs  get_id.rs  get_issues.rs  mod.rs
api/src/info/: contract.rs  domain.rs  main.rs  mod.rs
api/src/info/infrastructure/: mod.rs  repository.rs
api/src/init/: contract.rs  domain.rs  main.rs  mod.rs
api/src/init/infrastructure/: repository.rs  service.rs
api/src/jobs/: mod.rs
api/src/jobs/github_issues/: contract.rs  domain.rs  mod.rs  test.rs
api/src/jobs/github_issues/infrastructure/: repository.rs  service.rs
api/src/jobs/github_repositories/: contract.rs  domain.rs  mod.rs
api/src/jobs/github_repositories/infrastructure/: mod.rs  repository.rs  service.rs
api/src/jobs/info/: contract.rs  domain.rs  main.rs  mod.rs  test.rs
api/src/jobs/info/infrastructure/: repository.rs  service.rs
api/tests/: setup.rs
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
backend/api/: Cargo.toml
backend/api/src/: init.rs  lib.rs  main.rs
backend/api/src/api/: kenobi.rs  mod.rs  openapi.rs
backend/api/src/api/cryptocurrencies/: contract.rs  docs.rs  domain.rs  mod.rs  repository.rs
backend/api/src/api/cryptocurrencies/data/: mod.rs
backend/api/src/api/cryptocurrencies/handlers/: get.rs  get_id.rs  mod.rs
backend/api/src/api/projects/: contract.rs  docs.rs  domain.rs  mod.rs
backend/api/src/api/projects/data/: mod.rs  search.rs
backend/api/src/api/projects/handlers/: mod.rs  search.rs
backend/api/src/api/projects/infrastructure/: repository.rs
backend/api/src/api/repository/: contract.rs  docs.rs  domain.rs  mod.rs  repository.rs
backend/api/src/api/repository/data/: get_issues.rs  mod.rs  search.rs
backend/api/src/api/repository/handlers/: get_id.rs  get_issues.rs  mod.rs  search.rs
backend/api/src/api/repository/infrastructure/: mod.rs  repository.rs
backend/api/src/api/statistics/: contract.rs  docs.rs  domain.rs  mod.rs
backend/api/src/api/statistics/handlers/: get_language_counts.rs  mod.rs
backend/api/src/api/statistics/infrastructure/: mod.rs  repository.rs
backend/api/src/jobs/: mod.rs
backend/api/src/jobs/github_issues/: contract.rs  domain.rs  mod.rs  test.rs
backend/api/src/jobs/github_issues/infrastructure/: repository.rs  service.rs
backend/api/src/jobs/github_project_info/: contract.rs  domain.rs  mod.rs
backend/api/src/jobs/github_project_info/infrastructure/: service.rs
backend/api/src/jobs/github_repositories/: contract.rs  domain.rs  mod.rs  test.rs
backend/api/src/jobs/github_repositories/infrastructure/: repository.rs  service.rs
backend/api/src/jobs/github_topics/: contract.rs  domain.rs  mod.rs
backend/api/src/jobs/github_topics/infrastructure/: mod.rs  service.rs  update_statement.sql
backend/api/src/jobs/github_topics_scraper/: contract.rs  domain.rs  mod.rs
backend/api/src/jobs/github_topics_scraper/infrastructure/: mod.rs  repository.rs  service.rs
backend/api/src/jobs/github_topics_scraper/infrastructure/sql/: unscraped_projects.sql  unscraped_repositories.sql
backend/api/src/jobs/info/: contract.rs  domain.rs  mod.rs
backend/api/src/jobs/info/infrastructure/: service.rs
backend/api/tests/: setup.rs
backend/libs/config/src/: lib.rs
backend/libs/error/src/: actix.rs  lib.rs
backend/libs/sdks/: Cargo.toml
backend/libs/sdks/src/: lib.rs
backend/libs/sdks/src/coingecko/: contract.rs  data.rs  domain.rs
backend/libs/sdks/src/github/: contract.rs  data.rs  domain.rs  mod.rs
backend/libs/sdks/tests/: coingecko.rs  github.rs
backend/libs/store/: Cargo.toml
backend/libs/store/src/: lib.rs  prelude.rs
backend/libs/store/src/migrations/: cryptocurrencies.rs  github_projects.rs  github_repositories.rs  issue_labels.rs  issues.rs  mod.rs  prelude.rs  topics_repositories.rs
backend/libs/store/src/objects/: cryptocurrencies.rs  cryptocurrency_with_repositories.rs  issues.rs  language_count.rs  mod.rs  repository_view.rs  search_github_project.rs  search_repository.rs
backend/libs/support/: Cargo.toml
backend/libs/support/src/: count.rs  db_pool.rs  lib.rs  logger.rs  order.rs  pagination.rs
backend/migrations/2023-09-30-125034_cryptocurrencies/: up.sql
backend/migrations/2023-10-01-102605_github-repositories/: down.sql  up.sql
backend/migrations/2023-10-01-145428_issues/: up.sql
backend/migrations/2023-11-27-171045_topic-repos/: down.sql  up.sql
backend/migrations/2023-12-09-122605_issue-labels/: down.sql  up.sql
backend/tests/: Cargo.toml
backend/tests/src/: e2e_api.rs  helpers.rs  lib.rs  request.rs
backend/tests/src/cryptocurrencies/: get.rs  get_id.rs  get_issues.rs  helpers.rs  mod.rs
backend/tests/src/projects/: mod.rs  search.rs
backend/tests/src/repository/: get_id.rs  get_issues.rs  mod.rs  search.rs
backend/tests/src/statistics/: get_language_counts.rs  mod.rs
frontend/: .dockerignore  .eslintrc.json  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts
libs/apis/: Cargo.toml
libs/config/: Cargo.toml
libs/error/: Cargo.toml
libs/sdks/: Cargo.toml
libs/store/: Cargo.toml
libs/support/: Cargo.toml
tests/: Cargo.toml
tests/src/: e2e_api.rs  lib.rs
tests/src/cryptocurrencies/: get.rs  get_id.rs  get_issues.rs  mod.rs
(+60 files in other folders)
