[workspace]
members = ["api", "libs/*"]

[workspace.dependencies]
sea-orm = { version = "0.12.3", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
tokio = { version = "1.32.0", features = ["full"] }
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
log = "0.4.20"
dotenv = "0.15.0"

error.path = "libs/error"
apis.path = "libs/apis"
store.path = "libs/store"
config.path = "libs/config"