[workspace]
members = ["api", "libs/*"]

[workspace.dependencies]
sea-orm = { version = "0.12.3", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
tokio = { version = "1.32.0", features = ["full"] }
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107" }
thiserror = "1.0.49"
log = "0.4.20"
dotenv = "0.15.0"
env_logger = "0.10.0"
tokio-cron-scheduler = "0.9.4"
async-trait = "0.1.73"
chrono = { version = "0.4.31", features = ["serde"] }
actix = "0.13.1"
actix-web = "4.4.0"
utoipa = { version = "3.5.0", features = ["uuid"] }
validify = "1.0.11"

error.path = "libs/error"
sdks.path = "libs/sdks"
store.path = "libs/store"
config.path = "libs/config"
