[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apis.workspace = true
error.workspace = true
store.workspace = true
log.workspace = true
tokio.workspace = true
sea-orm.workspace = true 
config.workspace = true
env_logger = "0.10.0"

[[bin]]
path = "src/main.rs"
name = "api"

[[bin]]
path = "src/init/main.rs"
name = "init"
