[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdks.workspace = true
error.workspace = true
store.workspace = true
log.workspace = true
tokio.workspace = true
sea-orm.workspace = true
config.workspace = true
env_logger.workspace = true
tokio-cron-scheduler.workspace = true
async-trait.workspace = true
actix.workspace = true
actix-web.workspace = true

[[bin]]
path = "src/main.rs"
name = "api"

[[bin]]
path = "src/init.rs"
name = "init"
