[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
tokio.workspace = true
sea-orm.workspace = true
env_logger.workspace = true
async-trait.workspace = true
actix-web.workspace = true
utoipa.workspace = true
serde_json.workspace = true
validify.workspace = true
serde.workspace = true

# Workspace depenacies
sdks.workspace = true
error.workspace = true
store.workspace = true
support.workspace = true
config.workspace = true
actix-cors.workspace = true

[dev-dependencies]
adtest.workspace = true
reqwest.workspace = true
lazy_static.workspace = true
serial_test.workspace = true

[[bin]]
path = "src/main.rs"
name = "api"

[[bin]]
path = "src/init.rs"
name = "init"
