[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error.workspace = true
reqwest.workspace = true
sea-orm.workspace = true
serde.workspace = true
api.workspace = true
config.workspace = true
serde_json.workspace = true
store.workspace = true
support.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
adtest.workspace = true
lazy_static.workspace = true
