[package]
name = "sdks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
chrono.workspace = true
error.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strum = { version = "0.25.0", features = ["derive"] }

[dev-dependencies]
config.workspace = true
tokio.workspace = true
